// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FacebookIntegrationInstagramAds/> render() should render a spinner 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationInstagramAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationInstagramAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {},
          },
        }
      }
      loading={true}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations"
                >
                  All Apps
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations"
                      >
                        <a
                          to="/app/settings/integrations"
                        >
                          All Apps
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations/facebook"
                      >
                        <a
                          to="/app/settings/integrations/facebook"
                        >
                          Facebook, Messenger & Instagram
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      integration 1
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/overview"
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/overview"
                  >
                    Overview
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/customer_chat"
                  >
                    Customer chat
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/preferences"
                  >
                    Preferences
                  </a>
                </NavLink>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  lg={6}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xl={7}
                >
                  <div
                    className="col-lg-6 col-xl-7"
                  >
                    <div
                      className="mb-3"
                    >
                      <p>
                        It can take up to 2 hours to sync new Instagram ads into Gorgias. Comments on ads active in Gorgias are imported every 20 minutes. Learn more in our
                         
                        <a
                          href="https://docs.gorgias.com/en-US/instagram-ads-comments-81932"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          help docs
                        </a>
                        .
                      </p>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Container>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Loader
              inline={false}
              minHeight="500px"
              size="40px"
            >
              <div
                className="container"
              >
                <div
                  className="inner"
                  style={
                    Object {
                      "minHeight": "500px",
                    }
                  }
                >
                  <i
                    className="icon-custom icon-circle-o-notch md-spin"
                    style={
                      Object {
                        "fontSize": "40px",
                      }
                    }
                  />
                </div>
              </div>
            </Loader>
          </div>
        </Container>
      </div>
    </FacebookIntegrationInstagramAds>
  </Connect(FacebookIntegrationInstagramAds)>
</Provider>
`;

exports[`<FacebookIntegrationInstagramAds/> render() should render with ads limit reached 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationInstagramAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationInstagramAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
              "postid2": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 2",
                "is_active": true,
                "permalink": "http://fake.link.to/ad2",
                "ad_account_id": "act_123",
              },
              "postid3": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 3",
                "is_active": false,
                "permalink": "http://fake.link.to/ad3",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={2}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations"
                >
                  All Apps
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations"
                      >
                        <a
                          to="/app/settings/integrations"
                        >
                          All Apps
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations/facebook"
                      >
                        <a
                          to="/app/settings/integrations/facebook"
                        >
                          Facebook, Messenger & Instagram
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      integration 1
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/overview"
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/overview"
                  >
                    Overview
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/customer_chat"
                  >
                    Customer chat
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/preferences"
                  >
                    Preferences
                  </a>
                </NavLink>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  lg={6}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xl={7}
                >
                  <div
                    className="col-lg-6 col-xl-7"
                  >
                    <div
                      className="mb-3"
                    >
                      <p>
                        It can take up to 2 hours to sync new Instagram ads into Gorgias. Comments on ads active in Gorgias are imported every 20 minutes. Learn more in our
                         
                        <a
                          href="https://docs.gorgias.com/en-US/instagram-ads-comments-81932"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          help docs
                        </a>
                        .
                      </p>
                      <AdsOverviewCard
                        accountTotalAds={2}
                        integrations={
                          Immutable.List [
                            Immutable.Map {
                              "id": 1,
                              "name": "integration 1",
                              "type": "facebook",
                              "created_datetime": "2019-01-01 00:00:00",
                            },
                          ]
                        }
                        internals={
                          Immutable.Map {
                            "1": Immutable.Map {
                              "ads": Immutable.Map {
                                "postid1": Immutable.Map {
                                  "created_datetime": "2019-01-01 10:30:00",
                                  "name": "ad 1",
                                  "is_active": true,
                                  "permalink": "http://fake.link.to/ad1",
                                  "ad_account_id": "act_123",
                                },
                                "postid2": Immutable.Map {
                                  "created_datetime": "2019-01-01 10:30:00",
                                  "name": "ad 2",
                                  "is_active": true,
                                  "permalink": "http://fake.link.to/ad2",
                                  "ad_account_id": "act_123",
                                },
                                "postid3": Immutable.Map {
                                  "created_datetime": "2019-01-01 10:30:00",
                                  "name": "ad 3",
                                  "is_active": false,
                                  "permalink": "http://fake.link.to/ad3",
                                  "ad_account_id": "act_123",
                                },
                              },
                            },
                          }
                        }
                        maxAccountAds={2}
                      >
                        <Card
                          body={true}
                          tag="div"
                        >
                          <div
                            className="card card-body"
                          >
                            <h3>
                              Active ads per integration
                            </h3>
                            <UpgradePlanAlert>
                              <Alert
                                className="mb16"
                                type="success"
                              >
                                <div
                                  className="alert success mb16"
                                >
                                  <div
                                    className="content"
                                  >
                                    <span
                                      className="label"
                                    >
                                      <strong>
                                        Need to synchronize more ads?
                                      </strong>
                                       
                                      <Link
                                        className="alert-link"
                                        to="/app/settings/billing"
                                      >
                                        <a
                                          className="alert-link"
                                          to="/app/settings/billing"
                                        >
                                          Upgrade your plan!
                                        </a>
                                      </Link>
                                    </span>
                                  </div>
                                </div>
                              </Alert>
                            </UpgradePlanAlert>
                            <div
                              className="text-center"
                            >
                              2/2 ads 
                              <a
                                id="active-ads-tooltip"
                              >
                                <i
                                  className="material-icons text-muted"
                                >
                                  info_outline
                                </i>
                              </a>
                              <UncontrolledTooltip
                                target="active-ads-tooltip"
                              >
                                <Tooltip
                                  autohide={true}
                                  isOpen={false}
                                  placement="top"
                                  placementPrefix="bs-tooltip"
                                  target="active-ads-tooltip"
                                  toggle={[Function]}
                                  trigger="hover focus"
                                >
                                  <TooltipPopoverWrapper
                                    autohide={true}
                                    delay={
                                      Object {
                                        "hide": 50,
                                        "show": 0,
                                      }
                                    }
                                    fade={true}
                                    hideArrow={false}
                                    innerClassName="tooltip-inner"
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    popperClassName="tooltip show"
                                    target="active-ads-tooltip"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  />
                                </Tooltip>
                              </UncontrolledTooltip>
                            </div>
                            <Progress
                              barStyle={Object {}}
                              max={100}
                              min={0}
                              multi={true}
                              style={Object {}}
                              tag="div"
                              value={0}
                            >
                              <div
                                className="progress"
                                style={Object {}}
                              >
                                <Progress
                                  bar={true}
                                  barStyle={Object {}}
                                  className="color-NaN"
                                  id="progress-1"
                                  key="progress-1"
                                  max={2}
                                  min={0}
                                  striped={true}
                                  style={Object {}}
                                  tag="div"
                                  value={2}
                                >
                                  <div
                                    aria-valuemax={2}
                                    aria-valuemin={0}
                                    aria-valuenow={2}
                                    className="progress-bar color-NaN progress-bar-striped"
                                    id="progress-1"
                                    role="progressbar"
                                    style={
                                      Object {
                                        "width": "100%",
                                      }
                                    }
                                  />
                                </Progress>
                              </div>
                            </Progress>
                            <div
                              className="legendContainer"
                            >
                              <div
                                className="legend"
                                key="legend-1"
                              >
                                <div
                                  className="color-NaN progress-bar-striped legendColor"
                                />
                                integration 1
                                 
                                (
                                2
                                 
                                active ads)
                              </div>
                            </div>
                          </div>
                        </Card>
                      </AdsOverviewCard>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={2}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid2",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 2",
                  "is_active": true,
                  "permalink": "http://fake.link.to/ad2",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid3",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 3",
                  "is_active": false,
                  "permalink": "http://fake.link.to/ad3",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={2}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th />
                  <th>
                    Name
                  </th>
                  <th>
                    Creation date
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={false}
                      isLoading={false}
                      isToggled={true}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={true}
                          className="label"
                          htmlFor="toggle-button-4"
                          isDisabled={false}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={true}
                            className="label label"
                            htmlFor="toggle-button-4"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={true}
                              className="input"
                              disabled={true}
                              id="toggle-button-4"
                              name="toggle-button-4"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 1
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid2"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={false}
                      isLoading={false}
                      isToggled={true}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={true}
                          className="label"
                          htmlFor="toggle-button-5"
                          isDisabled={false}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={true}
                            className="label label"
                            htmlFor="toggle-button-5"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={true}
                              className="input"
                              disabled={true}
                              id="toggle-button-5"
                              name="toggle-button-5"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 2
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid3"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={true}
                      isLoading={false}
                      isToggled={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={false}
                          className="label disabledLabel"
                          htmlFor="toggle-button-6"
                          isDisabled={true}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={false}
                            className="label isDisabled label disabledLabel"
                            htmlFor="toggle-button-6"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={false}
                              className="input"
                              disabled={true}
                              id="toggle-button-6"
                              name="toggle-button-6"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad3"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 3
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad3"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationInstagramAds>
  </Connect(FacebookIntegrationInstagramAds)>
</Provider>
`;

exports[`<FacebookIntegrationInstagramAds/> render() should render with one Instagram ad 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationInstagramAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationInstagramAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations"
                >
                  All Apps
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations"
                      >
                        <a
                          to="/app/settings/integrations"
                        >
                          All Apps
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations/facebook"
                      >
                        <a
                          to="/app/settings/integrations/facebook"
                        >
                          Facebook, Messenger & Instagram
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      integration 1
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/overview"
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/overview"
                  >
                    Overview
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/customer_chat"
                  >
                    Customer chat
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/preferences"
                  >
                    Preferences
                  </a>
                </NavLink>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  lg={6}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xl={7}
                >
                  <div
                    className="col-lg-6 col-xl-7"
                  >
                    <div
                      className="mb-3"
                    >
                      <p>
                        It can take up to 2 hours to sync new Instagram ads into Gorgias. Comments on ads active in Gorgias are imported every 20 minutes. Learn more in our
                         
                        <a
                          href="https://docs.gorgias.com/en-US/instagram-ads-comments-81932"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          help docs
                        </a>
                        .
                      </p>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={1}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th />
                  <th>
                    Name
                  </th>
                  <th>
                    Creation date
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={false}
                      isLoading={false}
                      isToggled={true}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={true}
                          className="label"
                          htmlFor="toggle-button-1"
                          isDisabled={false}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={true}
                            className="label label"
                            htmlFor="toggle-button-1"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={true}
                              className="input"
                              disabled={true}
                              id="toggle-button-1"
                              name="toggle-button-1"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 1
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationInstagramAds>
  </Connect(FacebookIntegrationInstagramAds)>
</Provider>
`;

exports[`<FacebookIntegrationInstagramAds/> render() should render with two ads (one not active) 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationInstagramAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationInstagramAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
              "postid2": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "name": "ad 2",
                "is_active": false,
                "permalink": "http://fake.link.to/ad2",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations"
                >
                  All Apps
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations"
                      >
                        <a
                          to="/app/settings/integrations"
                        >
                          All Apps
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations/facebook"
                      >
                        <a
                          to="/app/settings/integrations/facebook"
                        >
                          Facebook, Messenger & Instagram
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      integration 1
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/overview"
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/overview"
                  >
                    Overview
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/customer_chat"
                  >
                    Customer chat
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/preferences"
                  >
                    Preferences
                  </a>
                </NavLink>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  lg={6}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xl={7}
                >
                  <div
                    className="col-lg-6 col-xl-7"
                  >
                    <div
                      className="mb-3"
                    >
                      <p>
                        It can take up to 2 hours to sync new Instagram ads into Gorgias. Comments on ads active in Gorgias are imported every 20 minutes. Learn more in our
                         
                        <a
                          href="https://docs.gorgias.com/en-US/instagram-ads-comments-81932"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          help docs
                        </a>
                        .
                      </p>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={1}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid2",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "name": "ad 2",
                  "is_active": false,
                  "permalink": "http://fake.link.to/ad2",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th />
                  <th>
                    Name
                  </th>
                  <th>
                    Creation date
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={false}
                      isLoading={false}
                      isToggled={true}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={true}
                          className="label"
                          htmlFor="toggle-button-2"
                          isDisabled={false}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={true}
                            className="label label"
                            htmlFor="toggle-button-2"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={true}
                              className="input"
                              disabled={true}
                              id="toggle-button-2"
                              name="toggle-button-2"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 1
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid2"
                >
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleInput
                      isDisabled={false}
                      isLoading={false}
                      isToggled={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Label
                          aria-checked={false}
                          className="label"
                          htmlFor="toggle-button-3"
                          isDisabled={false}
                          onClick={[Function]}
                          role="switch"
                        >
                          <label
                            aria-checked={false}
                            className="label label"
                            htmlFor="toggle-button-3"
                            onClick={[Function]}
                            role="switch"
                          >
                            <input
                              checked={false}
                              className="input"
                              disabled={true}
                              id="toggle-button-3"
                              name="toggle-button-3"
                              type="checkbox"
                            />
                            <div
                              className="slider"
                            />
                          </label>
                        </Label>
                      </div>
                    </ToggleInput>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        ad 2
                      </div>
                    </a>
                  </td>
                  <td
                    className="link-full-td"
                  >
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <div>
                        <Connect(DatetimeLabelContainer)
                          dateTime="2019-01-01 10:30:00"
                        >
                          <DatetimeLabelContainer
                            dateTime="2019-01-01 10:30:00"
                            dispatch={[Function]}
                            hasTooltip={true}
                            timezone="America/Los_Angeles"
                          >
                            <span>
                              <span
                                id="datetime-tooltip-pjpsszd2icb"
                              >
                                01/01/2019
                              </span>
                              <Tooltip
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                placement="top"
                                target="datetime-tooltip-pjpsszd2icb"
                              >
                                <UncontrolledTooltip
                                  className="tooltip datetimeTooltip"
                                  delay={
                                    Object {
                                      "hide": 0,
                                      "show": 200,
                                    }
                                  }
                                  placement="top"
                                  target="datetime-tooltip-pjpsszd2icb"
                                >
                                  <Tooltip
                                    autohide={true}
                                    className="tooltip datetimeTooltip"
                                    delay={
                                      Object {
                                        "hide": 0,
                                        "show": 200,
                                      }
                                    }
                                    isOpen={false}
                                    placement="top"
                                    placementPrefix="bs-tooltip"
                                    target="datetime-tooltip-pjpsszd2icb"
                                    toggle={[Function]}
                                    trigger="hover focus"
                                  >
                                    <TooltipPopoverWrapper
                                      autohide={true}
                                      className="tooltip datetimeTooltip"
                                      delay={
                                        Object {
                                          "hide": 0,
                                          "show": 200,
                                        }
                                      }
                                      fade={true}
                                      hideArrow={false}
                                      innerClassName="tooltip-inner"
                                      isOpen={false}
                                      placement="top"
                                      placementPrefix="bs-tooltip"
                                      popperClassName="tooltip show"
                                      target="datetime-tooltip-pjpsszd2icb"
                                      toggle={[Function]}
                                      trigger="hover focus"
                                    />
                                  </Tooltip>
                                </UncontrolledTooltip>
                              </Tooltip>
                            </span>
                          </DatetimeLabelContainer>
                        </Connect(DatetimeLabelContainer)>
                      </div>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationInstagramAds>
  </Connect(FacebookIntegrationInstagramAds)>
</Provider>
`;

exports[`<FacebookIntegrationInstagramAds/> render() should render without ad 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationInstagramAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationInstagramAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {},
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations"
                >
                  All Apps
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations"
                      >
                        <a
                          to="/app/settings/integrations"
                        >
                          All Apps
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/integrations/facebook"
                      >
                        <a
                          to="/app/settings/integrations/facebook"
                        >
                          Facebook, Messenger & Instagram
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      integration 1
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/overview"
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/overview"
                  >
                    Overview
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/customer_chat"
                  >
                    Customer chat
                  </a>
                </NavLink>
                <NavLink
                  activeClassName="active"
                  className="link"
                  exact={true}
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="link"
                    data-active-class-name="active"
                    data-exact={true}
                    href="/app/settings/integrations/facebook/1/preferences"
                  >
                    Preferences
                  </a>
                </NavLink>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  lg={6}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xl={7}
                >
                  <div
                    className="col-lg-6 col-xl-7"
                  >
                    <div
                      className="mb-3"
                    >
                      <p>
                        It can take up to 2 hours to sync new Instagram ads into Gorgias. Comments on ads active in Gorgias are imported every 20 minutes. Learn more in our
                         
                        <a
                          href="https://docs.gorgias.com/en-US/instagram-ads-comments-81932"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          help docs
                        </a>
                        .
                      </p>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={0}
          ads={Immutable.Seq []}
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        />
      </div>
    </FacebookIntegrationInstagramAds>
  </Connect(FacebookIntegrationInstagramAds)>
</Provider>
`;
